--- a/src/org/lcf/TabNavigatorSkin.mxml
+++ b/src/org/lcf/TabNavigatorSkin.mxml
@@ -187,7 +187,7 @@ is defined by the ComboBoxTextInputSkin class.
 	    <s:layout>
 			<s:VerticalLayout/>
 		</s:layout>
-		<s:HGroup height="25" width="100%">
+		<s:HGroup id="tabBar" height="25" width="100%">
 			<s:HGroup verticalAlign="middle">
 				<s:HGroup id="tabs" gap="1" minWidth="0" width="100%" height="100%"/>
 				
