add overlay-style navigator

--- a/src/org/lcf/util/AddButtonSkin.mxml
+++ b/src/org/lcf/util/AddButtonSkin.mxml
@@ -2,12 +2,10 @@
 
 <!--
 
-    ADOBE SYSTEMS INCORPORATED
-    Copyright 2008 Adobe Systems Incorporated
-    All Rights Reserved.
+Copyright (c) 2010 lizhnatao(lizhantao@gmail.com)
 
-    NOTICE: Adobe permits you to use, modify, and distribute this file
-    in accordance with the terms of the license agreement accompanying it.
+Permission is hereby granted to use, modify, and distribute this file 
+in accordance with the terms of the license agreement accompanying it.
 
 -->
 
