--- a/src/org/lcf/util/TabSkin.mxml
+++ b/src/org/lcf/util/TabSkin.mxml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <!--
+Copyright (c) 2010 lizhnatao(lizhantao@gmail.com)
 
-    ADOBE SYSTEMS INCORPORATED
-    Copyright 2008 Adobe Systems Incorporated
-    All Rights Reserved.
-
-    NOTICE: Adobe permits you to use, modify, and distribute this file
-    in accordance with the terms of the license agreement accompanying it.
+Permission is hereby granted to use, modify, and distribute this file 
+in accordance with the terms of the license agreement accompanying it.
 
 -->
 
